# SpinView

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/.workflows/: spinview.yml
.github/workflows/: static.yml
Get_help/: index.html
Internal_beta_test/: index.html
OVFfile_demo/: index.html
PBR/: index.html
Start/: index.html
UppASD_demo/: index.html
Vampire/: index.html
assets/html/: before_iso.html  (+18 more)
change_background_and_cmap/: index.html
change_color/: index.html
change_opacity/: index.html
change_reslution/: index.html
change_size/: index.html
clip_filter/: index.html
component_filter/: index.html
css/: custom.css  termynal.css
denoise/: index.html
docs/: Get_help.md  Internal_beta_test.md  OVFfile_demo.md  PBR.md  Start.md  UppASD_demo.md  Vampire.md  change_background_and_cmap.md  change_color.md  change_opacity.md  change_reslution.md  change_size.md  clip_filter.md  component_filter.md  denoise.md  installation.md  installation2.md  isosurface.md  overlap.md  projection.md  quick_camera_operation.md  quick_object_change.md  rescale_filter.md  reuse_database.md  share_data.md  store_data.md
installation/: index.html
installation2/: index.html
isosurface/: index.html
overlap/: index.html
overrides/: home.html
projection/: index.html
quick_camera_operation/: index.html
quick_object_change/: index.html
rescale_filter/: index.html
reuse_database/: index.html
search/: search_index.json
share_data/: index.html
spinview/: main.py  spinview.py
store_data/: index.html
(+81 files in other folders)
